--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
 
 
   
-                        <!--JavaScript-->
-                        <script src="./assets/js/poke-api.js"></script>
-                        <script src="./assets/js/main.js"></script>
+                          <!--JavaScript-->
+                          <script src="./assets/js/pokemon-model.js"></script>
+                          <script src="./assets/js/poke-api.js"></script>
+                          <script src="./assets/js/main.js"></script>
 </body>
 </html>
