--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
         </div>
       </li>
     </ol>
+
+    <div class="pagination">
+      <button id="loadMoreButton" type="button">
+        Load More...
+      </button>
+    </div>
+
+
+
   </section>
 
 
